--- a/src/scss/components/_pizza-block.scss
+++ b/src/scss/components/_pizza-block.scss
@@ -4,9 +4,15 @@
   width: 280px;
   text-align: center;
   margin-bottom: 65px;
+  transition: all 0.2s ease-in-out;
 
-  &:not(:nth-of-type(4n)) {
-    margin-right: 35px;
+  &:hover {
+    transform: scale(1.03);
+  }
+
+  &-wrapper {
+    display: flex;
+    justify-content: center;
   }
 
   &__image {
@@ -16,7 +22,7 @@
   &__title {
     font-size: 20px;
     font-weight: 900;
-    letter-spacing: 1%;
+    letter-spacing: 3px;
     margin-bottom: 20px;
   }
 
@@ -44,7 +50,7 @@
         @include noselect();
         &.active {
           background: #ffffff;
-          box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.04);
+          box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
           border-radius: 5px;
           cursor: auto;
         }
