--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -1,13 +1,26 @@
 .root {
   position: relative;
-  left: -120px;
+
+  @media (min-width: 645px) and (max-width: 1020px ) {
+    order: 3;
+    width: 100%;
+    margin-top: 20px;
+
+    .input {
+      width: 100%;
+    }
+  }
+
+  @media (max-width: 645px) {
+    margin-top: 20px;
+  }
 }
 
 .input {
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 12px 20px;
   padding-left: 42px;
-  width: 400px;
+  width: 320px;
   border-radius: 10px;
   font-size: 16px;
 
