--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -8,6 +8,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    -webkit-flex-flow: row wrap;
+    flex-flow: row wrap;
 
     @media (max-width: 645px) {
       flex-direction: column;
